styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    body {
        @apply font-system bg-white text-neutral-900 dark:bg-neutral-900 dark:text-white;
    }

    h1, h2, h3, .h1, .h2, .h3 {
        @apply font-degular
    }

    ::selection {
        @apply bg-neutral-900 text-white dark:bg-white dark:text-neutral-900;
      }
    ::-moz-selection {
        @apply bg-neutral-900 text-white dark:bg-white dark:text-neutral-900;
    }

}

@layer components {
    .container {
        @apply px-6 md:px-16 mx-auto max-w-5xl lg:max-w-7xl
    }

    .textLink {
        @apply text-link-light-default dark:text-link-dark-default underline underline-offset-4;
    }

    .textLink:hover {
        @apply text-link-light-hover dark:text-link-dark-hover;
    }

    .workSlider .slick-track {
        display: flex;
      }
    .workSlider .slick-track .slick-slide {
        display: flex;
        height: auto;
        align-items: center;
        justify-content: center;
      }

    .workSlider .slick-dots {
        bottom: 8% !important;
    }

    .workSlider .slick-dots li button:before {
        font-size: 10px;
        @apply text-black dark:text-white;
    }
    .workSlider .slick-dots li.slick-active button:before {
        font-size: 14px;
        @apply text-black dark:text-white;
    }

    .bgSlider {
        @apply absolute w-full h-full
    }

    .bgSlider .slick-list {
        @apply h-full;
    }

    .bgSlider .slick-list .slick-slider {
        @apply h-full;
    }
    .bgSlider .slick-list .slick-slider > div {
        @apply h-full;
    }
    .bgSlider .slick-list .slick-slider > div > div {
        @apply h-full;
    }
}

@layer utilities {
    .aspect-16x9 {
        padding-bottom: 56.25%;
        @apply relative;
    }

    .aspect-16x9 iframe {
        @apply absolute top-0 left-0 w-full h-full;
    }
}

